--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -430,6 +430,7 @@ li.mk-tabs-tab {
 .wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus::before,
 .wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus::after{
     border-color: $blue !important;
+}
 .wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus{
     width: 15px;
     height: 15px;
@@ -599,7 +600,6 @@ ul#menu-main_menu {
     }
 }
 
-.header-grid {
 .header-grid.mk-grid {
     max-width: none;
 }
