updates to accordion, finished photos page, most of homepage, set up calendar page

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -222,6 +222,7 @@ li.mk-tabs-tab {
 /* ============== Custom Classes ============== */
 
 .header-pg-row {
+    z-index: 100 !important;
     .page-section-content {
         height: 100%;
         padding: 0px;
@@ -758,4 +759,120 @@ div.p-block {
             padding: 0px !important;
         }
     }
+}
+
+
+// === HOMEPAGE STYLING === //
+
+.home-gray-section {
+    @extend .bw-page-section;
+    background: $gray;
+    h2, p {
+        color: #000;
+    }
+    h2 {
+        padding-top: 150px;
+    }
+    p {
+        padding-bottom: 150px;
+    }
+}
+
+.home-gray-icon-section {
+    @extend .home-gray-section;
+    padding-top: 145px;
+    h2,p {
+        padding-top: 0px;
+        @media screen and (max-width: 768px) {
+            text-align: center;
+        }
+    }
+}
+
+.home-bw-column {
+    @extend .bw-column;
+    border-bottom: 35px solid $white;
+    div {
+        button {
+            margin-left: 70px;
+            padding: 5% 10%;
+            @media screen and (max-width: 768px) {
+                margin-left: 30px;
+            }
+        }
+        h2 {
+            @media screen and (max-width: 768px) {
+                padding: 40px 20px 5px;
+                margin-bottom: 5px;
+            }
+        }
+    }
+    .home-bw-column-text {
+        @extend .bw-column-text;
+        padding: 0px 50px;
+        @media screen and (max-width: 768px) {
+            padding: 10px 30px;
+            p {
+                padding: 0px;
+            }
+        }
+    }
+    .btn-outline-white {
+        margin-bottom: 0px;
+        @media screen and (max-width: 768px) {
+            margin-bottom: 40px;
+        }
+    }
+    @media screen and (max-width: 768px) {
+        margin-top: auto;
+        border-bottom: none;
+    }
+}
+
+.btn-column {
+    display: block;
+    text-align: center;
+    margin-top: 50px;
+}
+
+// === PHOTOS PAGE STYLING === //
+
+#photos-accordion {
+    div {
+        h4 {
+            a {
+                span {
+                    @media screen and (max-width: 768px) {
+                        color: $blue;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.photos-gray-section {
+    @extend .home-gray-section;
+    p {
+        padding-top: 15%;
+        padding-bottom: 15%;
+    }
+}
+
+.photos-accordion-section {
+    @extend .outfitters-accordion-section;
+    margin-top: 10%;
+}
+
+.wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus.show-plus::after,
+.wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus.show-plus::before{
+    display: block;
+}
+
+.wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus:not(.show-minus):after {
+    display: block;
+}
+
+.wpb-js-composer .vc_tta .vc_tta-controls-icon.vc_tta-controls-icon-plus.show-minus {
+    display: none;
 }
