--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -955,8 +955,36 @@ div.p-block {
 .dummy asldkj{
     padding: 100%;
 }
-.dummy-data-1 {
+.chris-data-1 {
     p {
         font-size: 50px;
     }
 }
+.chris asldkj{
+    padding: 100%;
+}
+.chris-data-1 {
+    p {
+        font-size: 50px;
+    }
+}
+
+.chris asldkj{
+    padding: 100%;
+}
+.chris-data-1 {
+    p {
+        font-size: 50px;
+    }
+}
+
+.chris asldkj{
+    padding: 100%;
+}
+.chris-data-1 {
+    p {
+        font-size: 50px;
+    }
+}
+
+
