reorder js file, add tab border

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -783,6 +783,9 @@ div.p-block {
             margin: 15px 0;
         }
     }
+    .vc_tta-panel-heading {
+    border-bottom: 1px solid black;
+    }
 }
 
 // === OUTFITTERS PAGE === //
