--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -581,6 +581,53 @@ ul#menu-main_menu li ul.sub-menu li a {
   border: 0px !important;
   background-color: #fff;
 }
+.tab-content-container .tab-img-header img {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .tab-content-container .tab-img-header img {
+    margin-bottom: 40px;
+  }
+}
+.tab-content-container .tab-copy p {
+  padding-left: 20px;
+}
+@media screen and (min-width: 768px) {
+  .tab-content-container .tab-copy p {
+    padding-left: 75px;
+  }
+}
+.mobile-nav-tab-container {
+  text-align: center;
+}
+.mobile-nav-tab-container .vc_tta-panel-title a {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.mobile-nav-tab-container .vc_tta-panel-body {
+  border-top: none;
+}
+.mobile-nav-tab-container ul {
+  margin: 0 auto;
+}
+.mobile-nav-tab-container ul li {
+  list-style-type: none;
+  font-size: 16px;
+  margin: 20px 0;
+}
+.mobile-nav-tab-container ul li a {
+  padding: 0 5px;
+}
+.mobile-nav-tab-container-header {
+  border: 1px solid #000;
+}
+.mobile-nav-tab-container-header .vc_tta-panel-body {
+  border-top: none !important;
+  padding-top: 0;
+}
+.mobile-nav-tab-container-header .vc_tta-panel-title a {
+  margin: 15px 0;
+}
 .bw-page-section, .home-gray-section, .home-gray-icon-section, .photos-gray-section {
   background: #000;
 }
