--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -581,6 +581,53 @@ ul#menu-main_menu li ul.sub-menu li a {
   border: 0px !important;
   background-color: #fff;
 }
+.tab-content-container .tab-img-header img, .about-cancer-tabs .tab-img-header img {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .tab-content-container .tab-img-header img, .about-cancer-tabs .tab-img-header img {
+    margin-bottom: 40px;
+  }
+}
+.tab-content-container .tab-copy p, .about-cancer-tabs .tab-copy p {
+  padding-left: 20px;
+}
+@media screen and (min-width: 768px) {
+  .tab-content-container .tab-copy p, .about-cancer-tabs .tab-copy p {
+    padding-left: 75px;
+  }
+}
+.mobile-nav-tab-container {
+  text-align: center;
+}
+.mobile-nav-tab-container .vc_tta-panel-title a {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.mobile-nav-tab-container .vc_tta-panel-body {
+  border-top: none;
+}
+.mobile-nav-tab-container ul {
+  margin: 0 auto;
+}
+.mobile-nav-tab-container ul li {
+  list-style-type: none;
+  font-size: 16px;
+  margin: 20px 0;
+}
+.mobile-nav-tab-container ul li a {
+  padding: 0 5px;
+}
+.mobile-nav-tab-container-header {
+  border: 1px solid #000;
+}
+.mobile-nav-tab-container-header .vc_tta-panel-body {
+  border-top: none !important;
+  padding-top: 0;
+}
+.mobile-nav-tab-container-header .vc_tta-panel-title a {
+  margin: 15px 0;
+}
 .bw-page-section, .home-gray-section, .home-gray-icon-section, .photos-gray-section {
   background: #000;
 }
@@ -704,4 +751,22 @@ ul#menu-main_menu li ul.sub-menu li a {
 }
 .about-white-pg-section .column_container div p {
   padding: 2% 0 2% 15%;
+}
+.about-cancer-tabs ul {
+  background: #f4f4f4;
+}
+.about-cancer-tabs ul li.mk-tabs-tab a {
+  background-color: #f4f4f4 !important;
+  border: none !important;
+}
+.about-cancer-tabs ul li.mk-tabs-tab a:first-child {
+  margin-top: 25px;
+}
+.about-cancer-tabs ul li.is-active {
+  background: #f4f4f4;
+}
+.fixed-postion {
+  position: fixed !important;
+  left: 315px;
+  top: 140px;
 }
